@@ -1,1 +1,35 @@
 # AppointmentScheduler
+
+VERSION: 2.0
+
+DATE: 4/28/2021
+
+DESCRIPTION:
+This is  a java application for managing appointments. It features:
+A login screen validates user credentials (username and password) and provides internationalization for French users.
+A main screen displays calendar of appointments and allows filters to view appointments per week and per month. 
+Appointment notifications to alert users of any appointments taking place within 15 minutes of login.
+Appointments can be added, edited or deleted. Each appointment is assigned a customer.
+Notification of any time conflicts with existing appointments assigned to a specific customer when adding or updating an appointment.
+Customers can be added, edited or deleted. Deleting a customer also deletes all of its assigned appointments.
+Generates reports for: total number of customer appointments by type and month, schedule for each contact in your list and total number of customer appointments by location.
+
+**Lambda Expressions in ManageAppointmentController, DBAppointments and AlertBoxes classes
+
+AUTHOR:
+Manuel Fuentes
+manuel.fuentes301@gmail.com
+
+TOOLS:
+NetBeans 11.3
+Java SE 11.0.10
+JavaFX-SDK-11.0.2
+MySQL-Connector-Java-8.0.22
+
+INSTRUCTIONS:
+1. Download and install JDK 11 (https://www.oracle.com/java/technologies/javase-jdk11-downloads.html)
+2. Download and install JavaFX 11 (https://gluonhq.com/products/javafx/)
+3. Unzip the downloaded QAM1 file 
+4. Open Command Line (for Windows) or Terminal (for Mac OS) and change directory to the path of “QAM1/dist”
+5. Copy/paste the following command substituting “path/to/javafx/lib” with the path of  javafx-sdk-11.0.?/lib
+java --module-path [path/to/javafx/lib] --add-modules=javafx.controls --add-modules=javafx.base --add-modules=javafx.graphics --add-modules=javafx.media --add-modules=javafx.swing --add-modules=javafx.web --add-modules=javafx.fxml -jar QAM1.jar
